syntax = "proto3";
option go_package = ".";

service UserService{
  rpc Signup(SignupRequest)returns(SignupResponse);
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc Refresh(RefreshRequest)returns(RefreshResponse);
  rpc Update(UpdateRequest)returns(UpdateResponse);
  rpc Delete(Request)returns(DeleteResponse);
  rpc UserById(UserByIdRequest)returns(UserByIdResponse);
}

message SignupRequest{
  string login = 1;
  string email = 2;
  string password = 3;
  string name = 4;
  int32 age = 5;
}

message LoginRequest{
  string login = 1;
  string password = 2;
}

message RefreshRequest{
  string id = 1;
  string refreshToken = 2;
}

message UpdateRequest{
  string email = 1;
  string name = 2;
  int32 age = 3;
}

message Request{
}

message UserByIdRequest{
  string id = 1;
}


message SignupResponse{
  User user = 1;
  string refreshToken = 2;
  string accessToken = 3;
}

message LoginResponse{
  string refreshToken = 1;
  string accessToken = 2;
}

message RefreshResponse{
  string refreshToken = 1;
  string accessToken = 2;
}

message UpdateResponse{
  bool success = 1;
}

message DeleteResponse{
    bool success = 1;
}

message UserByIdResponse{
  User user = 1;
}

message User{
  string id = 1;
  string login = 2;
  string email = 3;
  string name = 4;
  int32 age = 5;
}
